# Auto_Email_Assistant_with_Crewai

./: README.md  pyproject.toml
src/: nodes.py
