[project]
name = "auto-email-assistant-with-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.3.0",
    "google-api-python-client>=2.186.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
auto-email-assistant-with-crewai = { workspace = true }

[dependency-groups]
dev = [
    "auto-email-assistant-with-crewai",
]
